# rust-backend

./: .gitignore  Cargo.toml
entity/: Cargo.toml
entity/src/: mod.rs  prelude.rs  services.rs
migration/src/: m20220101_000001_create_table.rs
src/: error.rs  main.rs
src/controller/: mod.rs  routes_whatsapp.rs
src/controller/route_services/: mod.rs  request_service.rs
src/controller/route_services/dao/: create_service.rs  delete_service.rs  get_all.rs  mod.rs
src/controller/route_services/models/: mod.rs  service_model.rs
src/controller/routes_whatsapp/: whatsapp_requests.rs
src/controller/routes_whatsapp/whatsapp_model/: mod.rs  whatsapp_payload.rs
src/core/: enviroments.rs  mod.rs
src/database/: database_manager.rs
